Fix full height on safari

--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ html {
 body {
     height: 100%;
     height: -webkit-fill-available;
+    height: 100vh;
+    height: calc(var(--vh, 1vh)*100);
 }
 
 .background-gray {
